@@ -1,3 +1,11 @@
+1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* FArguments.m ([FArguments_c -createEnd]): Call super createEnd.
+
+	* defobj.h: Clarify docs on addRef:withArgument:.
+	(Zone): Switch return type of getPageSize from int to size_t.
+	(FArguments): Add using phase tag before getResult.
+
 1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* DefObject.m ([Object_s -lispIn:]): If function name is
